package ar.edu.utn.frba.dds.prenda;


public class TipoDePrenda {

  Categoria categoria;

  public TipoDePrenda(Categoria categoria) {
    this.categoria = categoria;
  }

  public Categoria categoria() {
    return this.categoria;
  }
}